--- a/att.teste/projeto/index.html
+++ b/att.teste/projeto/index.html
@@ -54,11 +54,20 @@ background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100
     <h2>Lista de Tarefas</h2>
     <input type="text" placeholder="Digite algo">
     <button class="button_inserir">Inserir</button>
-    <button class="button_remove">Remover</button>
+    
     <button class="button_remove_todos">Remover Todos</button>
 
     <ol></ol>
 
+
+
+
+</div>
+
+
+<div class="lado_direito">
+
+    <img src="../image/to-do-list.png" alt="">
 
 
 
